--- a/templates/match_maker/show.html.twig
+++ b/templates/match_maker/show.html.twig
@@ -13,11 +13,11 @@
             </tr>
             <tr>
                 <th>Player1</th>
-                <td>{{ match_maker.player1 }}</td>
+                <td>{{ match_maker.playerA.username }}</td>
             </tr>
             <tr>
                 <th>Player2</th>
-                <td>{{ match_maker.player2 }}</td>
+                <td>{{ match_maker.playerB.username }}</td>
             </tr>
             <tr>
                 <th>Winner</th>
@@ -25,11 +25,11 @@
             </tr>
             <tr>
                 <th>ScorePlayer1</th>
-                <td>{{ match_maker.scorePlayer1 }}</td>
+                <td>{{ match_maker.scorePlayerA }}</td>
             </tr>
             <tr>
                 <th>ScorePlayer2</th>
-                <td>{{ match_maker.scorePlayer2 }}</td>
+                <td>{{ match_maker.scorePlayerB }}</td>
             </tr>
             <tr>
                 <th>Status</th>
